k8s/book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: book-service
  template:
    metadata:
      labels:
        component: book-service
    spec:
      containers:
        - name: microservice-book
          image: sachinathu/microservices-book:latest
          ports:
            - containerPort: 4545
              protocol: TCP
          imagePullPolicy: Always
