k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: customer-service
  template:
    metadata:
      labels:
        component: customer-service
    spec:
      containers:
        - name: microservice-customer
          image: sachinathu/microservices-customer
          ports:
            - containerPort: 5555
