k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-service
  template:
    metadata:
      labels:
        component: order-service
    spec:
      containers:
        - name: microservice-order
          image: sachinathu/microservices-order:latest
          ports:
            - containerPort: 6565
              protocol: TCP
          imagePullPolicy: Always
