k8s/book-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-cluster-ip-service
  labels:
    component: book-service
spec:
  type: ClusterIP
  selector:
    component: book-service
  ports:
    - port: 4545
      targetPort: 4545
      protocol: TCP
