k8s/book-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-node-port
spec:
  type: NodePort
  ports:
    - port: 4545
      targetPort: 4545
      nodePort: 31045
      protocol: TCP
  selector:
    component: book-service
