k8s/customer-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-cluster-ip-service
  labels:
    component: customer-service
spec:
  type: ClusterIP
  selector:
    component: customer-service
  ports:
    - port: 5555
      targetPort: 5555
      protocol: TCP
