k8s/customer-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-node-port
spec:
  type: NodePort
  ports:
    - port: 5555
      targetPort: 5555
      nodePort: 31055
      protocol: TCP
  selector:
    component: customer-service
