k8s/mongodb-nord-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-node-port
spec:
  type: NodePort
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 31017
  selector:
    component: mongodb
