k8s/order-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-cluster-ip-service
  labels:
    component: order-service
spec:
  type: ClusterIP
  selector:
    component: order-service
  ports:
    - port: 6565
      targetPort: 6565
      protocol: TCP
