k8s/order-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-node-port
spec:
  type: NodePort
  ports:
    - port: 6565
      targetPort: 6565
      nodePort: 31065
      protocol: TCP
  selector:
    component: order-service
