k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /book/?(.*)
            pathType: Prefix
            backend:
                service:
                  name: book-cluster-ip-service
                  port: 
                    number: 4545
          - path: /customer/?(.*)
            pathType: Prefix
            backend:
              service:
                    name: customer-cluster-ip-service
                    port: 
                      number: 5555
          - path: /order/?(.*)
            pathType: Prefix
            backend:
              service:
                    name: order-cluster-ip-service
                    port: 
                      number: 6565
